# bevy_mesh_drawing

./: Cargo.lock.backup  Cargo.toml  README.md
crates/: README.md
crates/mesh_drawing/: Cargo.toml
crates/mesh_drawing/src/: lib.rs  plugin.rs
crates/mesh_drawing/src/components/: camera.rs  canvas.rs  cleanup.rs  grab_transformable.rs  indicators.rs  mod.rs  polygonal_mesh.rs
crates/mesh_drawing/src/events/: create_mode.rs  edit_mode.rs  mod.rs  picker.rs
crates/mesh_drawing/src/resources/: drawing.rs  mod.rs  plugin.rs
crates/mesh_drawing/src/systems/: cleanup.rs  create_mode.rs  debug.rs  drawing_mode.rs  edit_mode.rs  grab_transformer.rs  mod.rs  picker.rs  raycast.rs  state.rs
crates/mesh_drawing/src/utils/: canvas_correction.rs  indicators.rs  mod.rs
crates/mesh_geometry_utils/: Cargo.toml  README.md
crates/mesh_geometry_utils/src/: lib.rs
crates/mesh_geometry_utils/src/data_structures/: edges.rs  mesh_polygon.rs  mod.rs  ordered_sm.rs  vertices.rs
crates/mesh_geometry_utils/src/mesh_builder/: mod.rs
crates/mesh_geometry_utils/src/mesh_builder/earcutr/: earcutr.rs  mesh.rs  mod.rs
crates/mesh_geometry_utils/src/mesh_builder/lyon/: mod.rs
examples/: README.md  simple.rs
src/: lib.rs
