[package]
name = "bevy_mesh_drawing"
version = "0.2.0"
authors = ["Nilay Savant"]
edition = "2021"
categories = ["bevy", "mesh", "drawing", "graphics"]
description = "Bevy Plugin to draw polygonal meshes"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["bevy", "mesh", "drawing", "gamedev", "graphics"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
mesh_drawing = { path = "crates/mesh_drawing" }

[dev-dependencies]
bevy = { version = "0.12" }
[workspace]
members = ["crates/*"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
