[package]
name = "mesh_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
] }
bevy_mod_raycast = "0.13"
bevy_mod_picking = "0.15"
mesh_geometry_utils = { path = "../mesh_geometry_utils" }
