[package]
name = "mesh_drawing"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_render",
    "bevy_pbr",
] }
bevy_mod_raycast = "0.16"
bevy_mod_picking = "0.17"
mesh_geometry_utils = { path = "../mesh_geometry_utils" }
