[package]
name = "mesh_drawing"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render",
    "bevy_pbr",
] }
bevy_mod_raycast = { version = "0.17", default-features = false }
bevy_mod_picking = { version = "0.18", default-features = false,  features = ["highlight", "selection", "backend_raycast"]}
mesh_geometry_utils = { path = "../mesh_geometry_utils" }
