[package]
name = "mesh_geometry_utils"
version = "0.3.0"
edition = "2021"

[features]
default = []
bevy_prototype_lyon = ["dep:bevy_prototype_lyon"] # unused atm


[dependencies]
delegate = "0.9.0"
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render",
] }
bevy_prototype_lyon = { version = "0.11", optional = true }
geo = "0.26"
earcutr = "0.4"
serial_int = "2.0.0"
slotmap = { version = "1.0", default-features = false }
